// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders link button correctly 1`] = `
<a
  className="kHnYRc"
  href="/"
  size="regular"
>
  Dummy Label
</a>
`;

exports[`<Button /> renders outline large size button correctly 1`] = `
<button
  className=" noFocus eBkRKA"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline regular size button correctly 1`] = `
<button
  className=" noFocus fAhIdS"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline regular size disabled button correctly 1`] = `
<button
  className=" noFocus fAhIdS"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline small size button correctly 1`] = `
<button
  className=" noFocus dVAURc"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special large size button correctly 1`] = `
<button
  className=" noFocus fxuzOL"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special regular size button correctly 1`] = `
<button
  className=" noFocus iShFr"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special regular size disabled button correctly 1`] = `
<button
  className=" noFocus iShFr"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special small size button correctly 1`] = `
<button
  className=" noFocus ibrbUd"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard large size button correctly 1`] = `
<button
  className=" noFocus kdJqXr"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard regular size button correctly 1`] = `
<button
  className=" noFocus encbkH"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard regular size disabled button correctly 1`] = `
<button
  className=" noFocus encbkH"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard small size button correctly 1`] = `
<button
  className=" noFocus bFeSYA"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent large size button correctly 1`] = `
<button
  className=" noFocus hegczD"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent regular size button correctly 1`] = `
<button
  className=" noFocus bSoaLb"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent regular size disabled button correctly 1`] = `
<button
  className=" noFocus bSoaLb"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent small size button correctly 1`] = `
<button
  className=" noFocus kEKykV"
  size="small"
>
  Dummy Label
</button>
`;
